Fix the z-indexes

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -276,6 +276,13 @@ $button-ghost-font-size--medium: 16px;
 // # z-index
 // #############################
 
+// New z-index
+$z-index-drawer-top: 10;
+$z-index-header: 15;
+$z-index-mask: 17;
+$z-index-drawer-side: 20;
+
+// Old z-index
 $z-index-progress-step: 15;
 $z-index-meta-language: 20;
 $z-index-progress-step-bullet: 16;
