--- a/scss/style/_header.scss
+++ b/scss/style/_header.scss
@@ -15,6 +15,7 @@ $header-search-lg-width: 500px;
   background-color: $color-white;
   border-top: 2px solid $color-dark-indigo;
   transition: background-color $transition-normal $transition-ease;
+  z-index: $z-index-header;
 
   &.transparent {
     background-color: transparent;
