--- a/scss/style/_mask.scss
+++ b/scss/style/_mask.scss
@@ -8,5 +8,5 @@
   left: 0;
 
   background-color: fade-out($color-black, 0.5);
-  z-index: $z-index-site-page-masked;
+  z-index: $z-index-mask;
 }
